apps/note-mark/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-mark
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: note-mark
    app.kubernetes.io/part-of: note-mark
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: note-mark
      app.kubernetes.io/part-of: note-mark
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: note-mark
        app.kubernetes.io/part-of: note-mark
    spec:
      containers:
        - name: note-mark
          image: ghcr.io/enchant97/note-mark-aio:0.19.3
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: note-mark-data
