apps/note-mark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: note-mark
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: note-mark
    app.kubernetes.io/part-of: note-mark
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: note-mark
    app.kubernetes.io/part-of: note-mark
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
