apps/note-mark/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-mark
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: note-mark
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: notemark.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: note-mark
                port:
                  number: 80
